# skillsyoga

./: .gitignore  AGENTS.md  AGENTS1.md  CLAUDE.md  LICENSE  README.md  USAGE.md  agents.md  deploy.sh  inc_major_version.sh  inc_minor_version.sh  inc_patch_version.sh  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ITERATIONS.md
scripts/: bump_version.sh  package_macos.sh  release_homebrew.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.homebrew.generated.json  tauri.conf.homebrew.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  helpers.rs  lib.rs  main.rs  models.rs  skills.rs  state.rs  tools.rs
src/components/: CustomToolDialog.tsx  LazyMonacoEditor.tsx  SkillEditorDialog.tsx
src/components/ui/: context-menu.tsx  sidebar.tsx
src/hooks/: use-dashboard.ts
src/lib/: api.ts  monaco.ts  utils.ts
src/types/: models.ts
src/views/: MarketplaceView.tsx  SettingsView.tsx  SkillsView.tsx  ToolsView.tsx
