[package]
name = "SkillsYoga"
version = "0.1.27"
description = "Desktop skill manager for AI coding tools"
authors = ["SkillsYoga Contributors"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillsyoga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
trash = "5.2.5"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
